--- a/Project10_collectionview/Project10_collectionview/Base.lproj/Main.storyboard
+++ b/Project10_collectionview/Project10_collectionview/Base.lproj/Main.storyboard
@@ -46,28 +46,29 @@
                                     <rect key="frame" x="0.0" y="0.0" width="140" height="180"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zER-aR-ZAS">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zER-aR-ZAS">
                                             <rect key="frame" x="10" y="10" width="120" height="120"/>
-                                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" secondItem="zER-aR-ZAS" secondAttribute="height" multiplier="1:1" id="FX9-pz-h4g"/>
+                                                <constraint firstAttribute="width" secondItem="zER-aR-ZAS" secondAttribute="height" multiplier="1:1" id="Mfp-0p-HDy"/>
+                                                <constraint firstAttribute="width" constant="120" id="PPn-UI-hBL"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Mc-0b-aQM">
-                                            <rect key="frame" x="10" y="140" width="120" height="34"/>
+                                            <rect key="frame" x="10" y="134" width="120" height="40"/>
                                             <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="zER-aR-ZAS" firstAttribute="leading" secondItem="ChP-or-oEj" secondAttribute="leading" constant="10" id="05J-7p-qAs"/>
-                                        <constraint firstItem="4Mc-0b-aQM" firstAttribute="leading" secondItem="ChP-or-oEj" secondAttribute="leading" constant="10" id="0pg-aF-hMT"/>
-                                        <constraint firstAttribute="trailing" secondItem="4Mc-0b-aQM" secondAttribute="trailing" constant="10" id="GTL-3X-myM"/>
-                                        <constraint firstAttribute="trailing" secondItem="zER-aR-ZAS" secondAttribute="trailing" constant="10" id="Y0T-RM-aw2"/>
-                                        <constraint firstAttribute="bottom" secondItem="4Mc-0b-aQM" secondAttribute="bottom" constant="6" id="aCe-rY-rQd"/>
-                                        <constraint firstItem="zER-aR-ZAS" firstAttribute="top" secondItem="ChP-or-oEj" secondAttribute="top" constant="10" id="kxD-Ge-cbe"/>
-                                        <constraint firstItem="4Mc-0b-aQM" firstAttribute="top" secondItem="zER-aR-ZAS" secondAttribute="bottom" constant="10" id="qD7-ir-OTZ"/>
+                                        <constraint firstItem="4Mc-0b-aQM" firstAttribute="leading" secondItem="ChP-or-oEj" secondAttribute="leading" constant="10" id="BCp-fl-xEy"/>
+                                        <constraint firstAttribute="trailing" secondItem="zER-aR-ZAS" secondAttribute="trailing" constant="10" id="Osf-fT-rjb"/>
+                                        <constraint firstItem="zER-aR-ZAS" firstAttribute="leading" secondItem="ChP-or-oEj" secondAttribute="leading" constant="10" id="Qmp-Ka-Xlp"/>
+                                        <constraint firstAttribute="bottom" secondItem="4Mc-0b-aQM" secondAttribute="bottom" constant="6" id="Wxi-nH-b9p"/>
+                                        <constraint firstItem="zER-aR-ZAS" firstAttribute="top" secondItem="ChP-or-oEj" secondAttribute="top" constant="10" id="b5c-hY-ND9"/>
+                                        <constraint firstItem="4Mc-0b-aQM" firstAttribute="top" secondItem="zER-aR-ZAS" secondAttribute="bottom" constant="4" id="tpU-rf-aoW"/>
+                                        <constraint firstAttribute="trailing" secondItem="4Mc-0b-aQM" secondAttribute="trailing" constant="10" id="wBT-xh-liO"/>
                                     </constraints>
                                 </collectionViewCellContentView>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -87,7 +88,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7aT-0v-x1M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4" y="-32"/>
+            <point key="canvasLocation" x="3.8167938931297707" y="-32.394366197183103"/>
         </scene>
     </scenes>
     <resources>
