--- a/Project13_instafilter/Project13_instafilter/Base.lproj/Main.storyboard
+++ b/Project13_instafilter/Project13_instafilter/Base.lproj/Main.storyboard
@@ -1,24 +1,96 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Project13_instafilter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SVB-2k-HA7">
+                                <rect key="frame" x="10" y="69" width="373" height="593"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g54-jV-v8u">
+                                        <rect key="frame" x="0.0" y="0.0" width="373" height="593"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="g54-jV-v8u" firstAttribute="top" secondItem="SVB-2k-HA7" secondAttribute="top" id="NwB-6X-dHB"/>
+                                    <constraint firstAttribute="width" secondItem="SVB-2k-HA7" secondAttribute="height" multiplier="373:593" id="TCn-T3-fps"/>
+                                    <constraint firstAttribute="trailing" secondItem="g54-jV-v8u" secondAttribute="trailing" id="dLk-N2-28a"/>
+                                    <constraint firstItem="g54-jV-v8u" firstAttribute="leading" secondItem="SVB-2k-HA7" secondAttribute="leading" id="l04-89-PLT"/>
+                                    <constraint firstAttribute="bottom" secondItem="g54-jV-v8u" secondAttribute="bottom" id="yvx-ez-uyh"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intensity:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c0M-xx-UFR">
+                                <rect key="frame" x="16" y="687" width="70" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="6Bs-WG-ULl">
+                                <rect key="frame" x="92" y="683" width="287" height="31"/>
+                                <connections>
+                                    <action selector="intensityChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="2ok-5E-nCB"/>
+                                </connections>
+                            </slider>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i3d-v0-c0h">
+                                <rect key="frame" x="16.000000000000007" y="780.66666666666663" width="121.66666666666669" height="34.333333333333371"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Change filter"/>
+                                <connections>
+                                    <action selector="changeFilter" destination="BYZ-38-t0r" eventType="touchUpInside" id="cKC-Pp-OIP"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z3n-eN-NP3">
+                                <rect key="frame" x="316" y="780.66666666666663" width="61" height="34.333333333333371"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Save"/>
+                                <connections>
+                                    <action selector="save" destination="BYZ-38-t0r" eventType="touchUpInside" id="YTo-MO-wU9"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="c0M-xx-UFR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="0LB-fM-pCV"/>
+                            <constraint firstItem="SVB-2k-HA7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="8br-Zw-qYy"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Z3n-eN-NP3" secondAttribute="trailing" constant="16" id="Ar7-GZ-Nqn"/>
+                            <constraint firstItem="i3d-v0-c0h" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="FHD-m9-S6i"/>
+                            <constraint firstItem="SVB-2k-HA7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="Mau-rp-Sdc"/>
+                            <constraint firstItem="c0M-xx-UFR" firstAttribute="top" secondItem="g54-jV-v8u" secondAttribute="bottom" constant="25" id="Ta6-bt-IhR"/>
+                            <constraint firstItem="6Bs-WG-ULl" firstAttribute="top" secondItem="g54-jV-v8u" secondAttribute="bottom" constant="21" id="URg-1v-hQZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6Bs-WG-ULl" secondAttribute="trailing" constant="16" id="Z31-RV-lFT"/>
+                            <constraint firstItem="6Bs-WG-ULl" firstAttribute="leading" secondItem="c0M-xx-UFR" secondAttribute="trailing" constant="8" symbolic="YES" id="Z4B-BJ-fuF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Z3n-eN-NP3" secondAttribute="bottom" constant="3" id="gcx-wM-Pdh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SVB-2k-HA7" secondAttribute="trailing" constant="10" id="kB7-Yn-ZGl"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="i3d-v0-c0h" secondAttribute="bottom" constant="3" id="vsg-GK-SSg"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="editedImageView" destination="g54-jV-v8u" id="Ozw-hG-Tdg"/>
+                        <outlet property="intensitySlider" destination="6Bs-WG-ULl" id="Jz8-wp-2mi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="130.53435114503816" y="-34.507042253521128"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
